crates/shwasi-parser/tests/snapshots/integration__import_table.snap
---
source: crates/shwasi-parser/tests/tests.rs
expression: pretty_fmt(&module)
---
imports
---
0: import "" "" (table 0.. funcref)


