crates/shwasi-parser/tests/snapshots/integration__prefix_byte.snap
---
source: crates/shwasi-parser/tests/tests.rs
expression: pretty_fmt(&module)
---
types
---
0: () -> ()

functions
---
0: func (0)

codes
---
0: locals: []
elem.drop 0
i32.trunc_sat_f32_s
i32.trunc_sat_f32_u
i64.trunc_sat_f64_s



