crates/shwasi-parser/tests/snapshots/integration__refnull_init.snap
---
source: crates/shwasi-parser/tests/tests.rs
expression: pretty_fmt(&module)
---
globals
---
0: global mut i32 ref.null funcref
1: global mut i32 ref.func 0


